jiaguxue-dacidian/_nextjs_backup/next-dev.err
[baseline-browser-mapping] The data in this module is over two months old.  To ensure accurate Baseline data, please update: `npm i baseline-browser-mapping@latest -D`
 ⚠ Attempted to load @next/swc-win32-x64-msvc, but an error occurred: \\?\D:\Desktop\make progress\jiaguxue-dacidian\node_modules\@next\swc-win32-x64-msvc\next-swc.win32-x64-msvc.node is not a valid Win32 application.
\\?\D:\Desktop\make progress\jiaguxue-dacidian\node_modules\@next\swc-win32-x64-msvc\next-swc.win32-x64-msvc.node
Request timed out after 3000ms

Retrying 1/3...
Request timed out after 3000ms

Retrying 1/3...
Request timed out after 3000ms

Retrying 1/3...
 ⨯ SyntaxError: Unexpected end of JSON input
    at JSON.parse (<anonymous>) {
  page: '/'
}
 ⨯ ./app/page.tsx:4:1
Module not found: Can't resolve '../components/Nav'
  2 | import { useEffect, useMemo, useState } from "react";
  3 | import Link from "next/link";
> 4 | import Nav from "../components/Nav";
    | ^
  5 |
  6 | type Entry = {
  7 |   id: number; title: string; pinyin: string; pinyinInitial: string;

https://nextjs.org/docs/messages/module-not-found
 ⚠ Fast Refresh had to perform a full reload. Read more: https://nextjs.org/docs/messages/fast-refresh-reload
 ⚠ Fast Refresh had to perform a full reload. Read more: https://nextjs.org/docs/messages/fast-refresh-reload
